# urldataextractor

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pylintrc  .travis.yml  README.md  README.rst  pytest.ini  setup.cfg  setup.py  tox.ini
tests/: base.py  context.py  test_validator.py
tests/data/: test_data.py
tests/validators/: test_url_validators.py
urldataextractor/: __init__.py  data.py  exceptions.py  url.py  validator.py
urldataextractor/extractor/: extractor.py  simple_extractor.py
urldataextractor/validators/: exceptions.py  url_validators.py
