[metadata]
name = urldataextractor
version = 0.0.1
author = Guillermo García Franco
author-email = guigarfr@gmail.com
summary = Extract relevant data from an url
license='LICENSE' file
description-file =
    README.rst
keywords =
    http
    url
    data extraction
    scrape
    library
    python
requires-dist = setuptools>36.6
classifiers =
    Development Status :: 1 - Planning Development
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Topic :: Other/Nonlisted Topic

[backwards_compat]
zip-safe = False

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
tests_require =
    mock
    responses

[options.package_data]
* = *.txt, *.rst, LICENSE

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3
dev =
    bumpversion
    mock
    pytest
    pytest-cov
    pytest-sugar
    pytest-xdist
    responses
    tox
coverage =
    coverage
doc =
    docutils
    sphinx
flake8 =
    flake8
    flake8-import-order
    hacking
pycodestyle =
    pycodestyle
pylint =
    pylint

[options.packages.find]
include = urldataextractor
exclude =
    tests/*

[pycodestyle]
count = True
exclude = eggs, *.tox/*, *.eggs/*
ignore = F405
max-line-length = 100